[workspace]

members = [
  "snippets",
  "abc105/abc105_a",
  "abc105/abc105_b",
  "abc105/abc105_c",
  "abc105/abc105_d",
  "abc106/abc106_a",
  "abc106/abc106_b",
  "abc106/abc106_c",
  "abc106/abc106_d",
  "abc107/abc107_a",
  "abc107/abc107_b",
  "abc107/arc101_a",
  "abc107/arc101_b",
  "abc115/abc115_a",
  "abc115/abc115_b",
  "abc115/abc115_c",
  "abc115/abc115_d",
  "abc116/abc116_a",
  "abc116/abc116_b",
  "abc116/abc116_c",
  "abc116/abc116_d",
  "abc133/abc133_a",
  "abc136/abc136_f",
]
