[workspace]

members = [
  "rs_snippets",
  "contests/abc114/abc114_a",
  "contests/abc105/abc105_a",
  "contests/abc105/abc105_b",
  "contests/abc105/abc105_c",
  "contests/abc105/abc105_d",
  "contests/abc106/abc106_a",
  "contests/abc106/abc106_b",
  "contests/abc106/abc106_c",
  "contests/abc106/abc106_d",
  "contests/abc107/abc107_a",
  "contests/abc107/abc107_b",
  "contests/abc107/arc101_a",
  "contests/abc107/arc101_b",
  "contests/abc115/abc115_a",
  "contests/abc115/abc115_b",
  "contests/abc115/abc115_c",
  "contests/abc115/abc115_d",
  "contests/abc116/abc116_a",
  "contests/abc116/abc116_b",
  "contests/abc116/abc116_c",
  "contests/abc116/abc116_d",
  "contests/abc133/abc133_a",
  "contests/abc136/abc136_f",
  "contests/abc140/abc140_e",
]
