[package]
name = "abc115_d"
version = "0.1.0"
authors = ["Toshinori Tsugita <tsugita.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = "0.8.9"
serde_derive = "1.0.94"
serde = "1.0.94"

[[bin]]
name = "abc115_d"
path = "main.rs"

[[bin]]
name = "abc115_d_test"
path = "main_test.rs"
